--- a/Plantilla.qmd
+++ b/Plantilla.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Proyecto Gestión Financiera"
-author: "Julio Tejero"
+author: "Alejandro Ariño"
 format: html
 editor: visual
 bibliography: references.bib
@@ -21,7 +21,7 @@ library(tidyquant)
 
 ## Descripción Activo y Contexto
 
-Fecha de entrega límite: Jueves 28 de Septiembre 23:59.
+Fecha de entrega límite: Miércoles 25 de Septiembre 23:59.
 
 ### Definición
 
@@ -31,7 +31,7 @@ Enel Chile se formó a partir de una reestructuración que comenzó en el año 2
 
 Enel Chile es la mayor suministradora de energía del país, debido a esto en relevante exponer los datos nacionales de uso de electricidad. En el paper "Consumption-based carbon emissions, renewable energy consumption, financial development and economic growth in Chile" de @kirikkaleli2021 se expone un análisis descriptivo de los consumos nacionales de electricidad, el cual se presenta a continuación:
 
-[![Tabla 2 en ](Data/Screenshot%202023-09-28%20at%2015.51.18.png){fig-align="center"}](https://doi.org/10.1002/bse.2945)
+[![Tabla 2 en](Data/Screenshot%202023-09-28%20at%2015.51.18.png){fig-align="center"}](https://doi.org/10.1002/bse.2945)
 
 En donde:
 
